--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,23 @@
-[*.{js,jsx,ts,tsx,vue}]
+# https://editorconfig.org
+
+root = true
+
+[*]
+# 编码格式
+charset = utf-8
+# 缩进方式([space|tab])
 indent_style = space
+# 缩进时的缩进大小
 indent_size = 2
+# 换行符风格，UNIX/Linux/Mac使用的是 0x0A（LF）,windows使用0x0D0A（CRLF），统一推荐使用UNIX风格。
 end_of_line = lf
-trim_trailing_whitespace = true
+# 是否移除行末的空白字符
 insert_final_newline = true
-max_line_length = 100
+# 是否以空白行结尾
+trim_trailing_whitespace = true
+
+[*.md]
+# 是否移除行末的空白字符
+insert_final_newline = false
+# 是否以空白行结尾
+trim_trailing_whitespace = false
