--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^4.8.0",
     "element-ui": "^2.15.10",
+    "shortid": "^2.2.16",
     "vue": "^2.6.11",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.2.0",
